# prism-scanner

./: .dockerignore  .gitignore  2026-03-31-README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  docker-compose.yml  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_negative.yml  false_positive.yml  new_rule.yml
.github/workflows/: ci.yml  example-scan.yml  prism-scan.yml
Formula/: README.md  prism-scanner.rb
examples/: clawhub-scan-report.md
npm/: README.md  package.json
rules/: malicious_signatures.yaml  permissions.yaml  suspicious_domains.yaml
src/prism/: __init__.py  __main__.py  cleaner.py  cli.py  fetcher.py  models.py  report.py  rules_loader.py  scanner.py  scoring.py  suppression.py
src/prism/engines/: ast_engine.py  manifest_engine.py  pattern_engine.py  residue_engine.py  taint.py
src/prism/rules/: malicious_signatures.yaml
tests/: test_scanner.py
tests/fixtures/malicious_skill/: evil_skill.py  package.json
